spacing issue

--- a/stories/Molecules/Text/BlockCTA/blockCTA.scss
+++ b/stories/Molecules/Text/BlockCTA/blockCTA.scss
@@ -15,4 +15,7 @@
     font-size: 16px;
     text-transform: uppercase;
   }
+  p {
+    margin-bottom: $spacing-40;
+  }
 }
